force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/Apttus_Config2__OrderSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Order System Properties</description>
    <label>Order System Properties</label>
</CustomObject>