force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__AgreementFieldsForPartialOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AgreementFieldsForPartialOrder__c</fullName>
    <description>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
    <inlineHelpText>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
    <label>Agreement Fields For Partial Order</label>
    <type>TextArea</type>
</CustomField>