force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__CreateAssetOnOrderActivation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CreateAssetOnOrderActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether asset creation is delayed until order activation</description>
    <inlineHelpText>Indicates whether asset creation is delayed until order activation</inlineHelpText>
    <label>Create Asset On Order Activation ?</label>
    <type>Checkbox</type>
</CustomField>