force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__InitiateBillingOnOrderActivation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InitiateBillingOnOrderActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether billing should be initiated on order activation</description>
    <inlineHelpText>Indicates whether billing should be initiated on order activation</inlineHelpText>
    <label>Initiate Billing On Order Activation ?</label>
    <type>Checkbox</type>
</CustomField>