force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__InitiateBillingOnOrderCreation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InitiateBillingOnOrderCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether billing should be initiated on order creation</description>
    <inlineHelpText>Indicates whether billing should be initiated on order creation</inlineHelpText>
    <label>Initiate Billing On Order Creation ?</label>
    <type>Checkbox</type>
</CustomField>