force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__OrderItemCreateBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderItemCreateBatchSize__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The order item batch size for the create order process expressed in line numbers. The default value is 100 bundles or standalone items. The SFDC governor limit affects the batch size.</description>
    <inlineHelpText>The order item batch size for the create order process expressed in line numbers. The default value is 100 bundles or standalone items. The SFDC governor limit affects the batch size.</inlineHelpText>
    <label>Order Item Create Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>