force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__SplitOrderCriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SplitOrderCriteriaFields__c</fullName>
    <description>The criteria fields used to split a large order</description>
    <inlineHelpText>The list of Order Line item fields used to split items added during a large order process into multiple orders. Each field API name separated by a comma or a new line.</inlineHelpText>
    <label>Split Order Criteria Fields</label>
    <type>TextArea</type>
</CustomField>