force-app/main/default/objects/Apttus_Config2__OrderSystemProperties__c/fields/Apttus_Config2__SplitOrderThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SplitOrderThreshold__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Indicates the maximum number of bundle or standalone products (i.e. line numbers) that may be added to a split order. Defaults to 100.</description>
    <inlineHelpText>Indicates the maximum number of bundle or standalone products (i.e. line numbers) that may be added to a split order. Defaults to 100.</inlineHelpText>
    <label>Split Order Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>